--- a/Dash_Uva.Rmd
+++ b/Dash_Uva.Rmd
@@ -61,8 +61,8 @@ knitr::opts_chunk$set(
 library(lubridate)
 anterior <- as.Date("2022-01-01")
 atual <-  as.Date("2022-02-01")
-data <- as.Date("2022-03-11")
-sem_ano <- 10 #ajustar semanalmente
+data <- as.Date("2022-03-18")
+sem_ano <- 11 #ajustar semanalmente
 mes <- 2
 # Linhas que precisam de ajuste: 71, 104, 107
 ```
@@ -239,7 +239,7 @@ BRANCA SEEDLESS EMBALADA {data-navmenu="PREÇOS AO PRODUTOR"}
 
 ``` {r database1}
 #Direcionado o R para o Diretorio a ser trabalhado
-setwd('c:/Users/Joao Ricardo Lima/Dropbox/tempecon/dados_UVa')
+setwd('c:/Users/Joao Ricardo Lima/Dropbox/tempecon/dados_Uva')
 
 options(digits=4)
 
@@ -414,7 +414,7 @@ valueBox(
 
 ### Preço de Uva Branca Embalada na Semana `r strftime(data, format = "%V")` de 2021
 ``` {r}
-num <- 12.45
+num <- 10.92
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
   icon= "fa-pen")
@@ -422,7 +422,7 @@ valueBox(
 
 ### Preço de Uva Branca Embalada na Semana `r strftime(data, format = "%V")` de 2020
 ``` {r}
-num <-11.71
+num <-12.03
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
   icon= "fa-pen")
@@ -587,13 +587,13 @@ Row {data-height=150}
 num <- tail(preco_vitoria,1)
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
-  color = "green",
-  icon= "fa-arrow-up")
+  color = "tomato",
+  icon= "fa-arrow-down")
 ```
 
 ### Preço de Uva Negra Embalada na Semana `r strftime(data, format = "%V")` de 2021
 ``` {r}
-num <- 10.44
+num <- 8.64
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
   icon= "fa-pen")
@@ -601,7 +601,7 @@ valueBox(
 
 ### Preço de Uva Negra Embalada na Semana `r strftime(data, format = "%V")` de 2020
 ``` {r}
-num <-11.00
+num <-12.80
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
   icon= "fa-pen")
@@ -828,13 +828,13 @@ Row {data-height=150}
 num <- tail(preco_vitoriase,1)
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
-  color = "green",
-  icon= "fa-arrow-up")
+  color = "tomato",
+  icon= "fa-arrow-down")
 ```
 
 ### Preço de Uva Negra na Semana `r strftime(data, format = "%V")` de 2021
 ``` {r}
-num <- 5.97
+num <- 5.74
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
   icon= "fa-pen")
@@ -842,7 +842,7 @@ valueBox(
 
 ### Preço de Uva Negra na Semana `r strftime(data, format = "%V")` de 2020
 ``` {r}
-num <-7.31
+num <-7.27
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
   icon= "fa-pen")
@@ -1515,6 +1515,8 @@ checkX13()
 
 options(digits=4)
 
+today <- as.Date("2022-02-11")
+
 #Dados de uva por estados
 
 dados3 <- read_excel("ceasas_mi_total22.xlsx", col_names = FALSE)
@@ -1550,6 +1552,7 @@ uva_total_peba <- uva_total_peba/1000 #passando o volume para toneladas
 colnames(uva_total_peba)[1]<-'pe+ba'
 
 #Juntando as bases de dados Total e PEBA
+
 uva_anual_all <- tibble(uva_anual_all, uva_total_peba)
 uva_anual_all$ano <- seq(as.Date('2017-01-01'),to=today,by='1 year')
 uva_anual_all <- uva_anual_all[,-c(2:3)]
@@ -1867,8 +1870,8 @@ EMPREGO
 #Direcionado o R para o Diretorio a ser trabalhado
 setwd('c:/Users/Joao Ricardo Lima/Dropbox/tempecon/dados_caged')
 
-anterior <- as.Date("2022-01-01")
-atual <-  as.Date("2022-02-01")
+anterior <- as.Date("2021-12-01")
+atual <-  as.Date("2022-01-01")
 #today <- as.Date("2022-02-11")
 today <- as.Date("2022-03-11")
 
@@ -1881,7 +1884,7 @@ library(plotly)
 #Entrando dados no R
 dados1 <- read.csv2('janeiro_2022.csv', header=T, sep=";", dec = ".")
 colnames(dados1)[1] <- 'date'
-dados1$date <- seq(as.Date('2021-01-01'),to=anterior,by='1 month')
+dados1$date <- seq(as.Date('2021-01-01'),to=atual,by='1 month')
 
 #Entrando com o restante dos dados
 
