--- a/Dash_Uva.Rmd
+++ b/Dash_Uva.Rmd
@@ -61,8 +61,8 @@ knitr::opts_chunk$set(
 library(lubridate)
 anterior <- as.Date("2022-01-01")
 atual <-  as.Date("2022-02-01")
-data <- as.Date("2022-03-18")
-sem_ano <- 11 #ajustar semanalmente
+data <- as.Date("2022-03-25")
+sem_ano <- 12 #ajustar semanalmente
 mes <- 2
 # Linhas que precisam de ajuste: 71, 104, 107
 ```
@@ -414,7 +414,7 @@ valueBox(
 
 ### Preço de Uva Branca Embalada na Semana `r strftime(data, format = "%V")` de 2021
 ``` {r}
-num <- 10.92
+num <- 9.77
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
   icon= "fa-pen")
@@ -422,7 +422,7 @@ valueBox(
 
 ### Preço de Uva Branca Embalada na Semana `r strftime(data, format = "%V")` de 2020
 ``` {r}
-num <-12.03
+num <-11.86
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
   icon= "fa-pen")
@@ -587,13 +587,13 @@ Row {data-height=150}
 num <- tail(preco_vitoria,1)
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
-  color = "tomato",
+  color = "green",
   icon= "fa-arrow-down")
 ```
 
 ### Preço de Uva Negra Embalada na Semana `r strftime(data, format = "%V")` de 2021
 ``` {r}
-num <- 8.64
+num <- 8.32
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
   icon= "fa-pen")
@@ -601,7 +601,7 @@ valueBox(
 
 ### Preço de Uva Negra Embalada na Semana `r strftime(data, format = "%V")` de 2020
 ``` {r}
-num <-12.80
+num <-12.65
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
   icon= "fa-pen")
@@ -834,7 +834,7 @@ valueBox(
 
 ### Preço de Uva Negra na Semana `r strftime(data, format = "%V")` de 2021
 ``` {r}
-num <- 5.74
+num <- 5.40
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
   icon= "fa-pen")
@@ -842,7 +842,7 @@ valueBox(
 
 ### Preço de Uva Negra na Semana `r strftime(data, format = "%V")` de 2020
 ``` {r}
-num <-7.27
+num <-7.37
 valueBox(
   value = paste0( "R$", format(num, decimal.mark =  ",")),
   icon= "fa-pen")
