--- a/Dash_Uva.Rmd
+++ b/Dash_Uva.Rmd
@@ -1870,10 +1870,10 @@ EMPREGO
 #Direcionado o R para o Diretorio a ser trabalhado
 setwd('c:/Users/Joao Ricardo Lima/Dropbox/tempecon/dados_caged')
 
-anterior <- as.Date("2021-12-01")
-atual <-  as.Date("2022-01-01")
+anterior <- as.Date("2022-02-01")
+atual <-  as.Date("2022-02-01")
 #today <- as.Date("2022-02-11")
-today <- as.Date("2022-03-11")
+today <- as.Date("2022-03-31")
 
 #Inicio do Script
 #Pacotes a serem utilizados 
@@ -1882,13 +1882,13 @@ library(scales)
 library(plotly)
 
 #Entrando dados no R
-dados1 <- read.csv2('janeiro_2022.csv', header=T, sep=";", dec = ".")
+dados1 <- read.csv2('fevereiro_2022.csv', header=T, sep=";", dec = ".")
 colnames(dados1)[1] <- 'date'
-dados1$date <- seq(as.Date('2021-01-01'),to=atual,by='1 month')
+dados1$date <- seq(as.Date('2021-01-01'),to=anterior,by='1 month')
 
 #Entrando com o restante dos dados
 
-load("janeiro_22_caged.RData")
+load("fevereiro_22_caged.RData")
 
 #dados_01_vsf$sexo <- lapply(dados_01_vsf$sexo, factor)
 
@@ -1934,7 +1934,7 @@ Row {data-height=125}
 
 ### pela viticultura em `r strftime(atual, format = "%B")` de 2022 
 ``` {r emp1}
-num <- 2070
+num <- 1903
 valueBox(
   value = paste0(num, " Contratados"),
   color = "green",
@@ -1943,7 +1943,7 @@ valueBox(
 
 ### pela viticultura em `r strftime(atual, format = "%B")` de 2022 
 ``` {r emp2}
-num <- 1841
+num <- 1295
 valueBox(
   value = paste0(num, " Demitidos"),
   color = "tomato",
@@ -1952,10 +1952,10 @@ valueBox(
 
 ### Saldo Gerado pela viticultura em `r strftime(atual, format = "%B")` de 2022 
 ``` {r emp3}
-num <- 229
+num <- 608
 valueBox(
   value = paste0(num, " Empregos"),
-  color = "tomato",
+  color = "green",
   icon= "fa-pen")
 ```
 
@@ -1975,10 +1975,10 @@ g1 <- ggplot(data=dados1) +  #estetica vai valer para todos os geom's
     labs(y= "Saldo de Emprego (unidade)", x= "Meses do Ano", title='Evolução do saldo de Empregos gerados na viticultura',
        caption = "")+
     scale_y_continuous(limits=c(-2700, 2200), n.breaks = 10, expand = expansion(add=c(0,0.5)))+
-    scale_x_date(date_breaks = "2 month",
+    scale_x_date(date_breaks = "1 month", expand=c(0,0),
                labels = date_format("%b/%y"))+
   theme_minimal()+ #Definindo tema
-  theme(axis.text.x=element_text(angle=0, hjust=0.5, size=10, margin = margin(b=5)),
+  theme(axis.text.x=element_text(angle=35, hjust=0.5, size=10, margin = margin(b=5)),
         axis.text.y=element_text(hjust=1, size=10, margin = margin(l=20)),
         axis.title.x = element_text(size=10, face = "bold", margin = margin(b=5)),
         axis.title.y = element_text(size=10, face = "bold", margin = margin(l=20)),
